--- a/Makefile.fltk
+++ b/Makefile.fltk
@@ -24,6 +24,7 @@ CXX = g++
 CXXFLAGS = -g -Wall -Iinclude $(FLTK_CXXFLAGS) $(HIDAPI_CXXFLAGS) $(EXTRA_DEFS)
 
 COMMON_SRCS = poll.cpp base.cpp frequency.cpp exception.cpp message.cpp \
+	poll_model.cpp \
 	response_callback.cpp poll_response_collector.cpp poll_runner.cpp \
 	observable.cpp observer.cpp timer.cpp datastore.cpp course.cpp \
 	screenshot.cpp
